--- a/DbTest/DbTest.csproj
+++ b/DbTest/DbTest.csproj
@@ -25,4 +25,10 @@
       <ProjectReference Include="..\MongoDBPoc\MongoDBPoc.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    
 </Project>
